--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="acton_month">Miesiąc</string>
-    <string name="acton_back_to_now">Dzisiaj</string>
+    <string name="acton_back_to_now">Wróć do początku</string>
+    <string name="action_add">Nowe zdarzenie</string>
     <string name="title_activity_day">DayActivity</string>
 
     <string name="whole_day_event">Dzisiaj:</string>
